@startuml
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam shadowing false

package "GieudexPol.Domain.Entities" {

    class User {
        + int Id
        + Guid AuthId
        + String Username
        + String PasswordHash
        + String Role
        + ICollection<Wallet> Wallets
        + ICollection<UserAlert> UserAlerts
        + ICollection<AuditLog> AuditLogs
        + ICollection<Notification> Notifications
        + ICollection<Transaction> SentTransactions
        + ICollection<Transaction> ReceivedTransactions
    }

    class Wallet {
        + int Id
        + int UserId
        + User User
        + int CurrencyId
        + Currency Currency
        + Decimal Balance
    }

    class Currency {
        + int Id
        + String Symbol
        + String Name
        + Boolean IsActive
        + ICollection<Wallet> Wallets
        + ICollection<ExchangeRate> ExchangeRates
        + ICollection<Transaction> Transactions
        + ICollection<UserAlert> UserAlerts
    }

    class ExchangeRate {
        + int Id
        + int CurrencyId
        + Currency Currency
        + int RateSourceId
        + RateSource RateSource
        + Decimal BuyPrice
        + Decimal SellPrice
        + DateTime EffectiveDate
        + DateTime FetchedAt
    }
    
    class RateSource {
        + int Id
        + String Name
        + String Url
        + ICollection<ExchangeRate> ExchangeRates
    }

    class Transaction {
        + int Id
        + int SenderId
        + User Sender
        + int ReceiverId
        + User Receiver
        + Decimal Amount
        + int CurrencyId
        + Currency Currency
        + String Status
        + String TransactionType
        + Decimal AppliedFee
        + Guid? TransactionFeeId
        + TransactionFee TransactionFee
        + DateTime Timestamp
    }

    class UserAlert {
        + int Id
        + int UserId
        + User User
        + int CurrencyId
        + Currency Currency
        + Decimal TargetPrice
        + DateTime CreatedAt
        + Boolean IsActive
    }

    class AuditLog {
        + Guid Id
        + Guid UserId
        + String Action
        + String EntityName
        + Guid EntityId
        + String Changes
        + DateTime Timestamp
        + User User
    }

    class Notification {
        + Guid Id
        + Guid UserId
        + String Message
        + Boolean IsRead
        + DateTime CreatedAt
        + User User
    }

    class TransactionFee {
        + Guid Id
        + String Type
        + Decimal FeePercentage
        + Decimal FlatFee
        + Boolean IsActive
    }

    User "1" *-- "many" Wallet
    User "1" *-- "many" UserAlert
    User "1" *-- "many" AuditLog
    User "1" *-- "many" Notification
    User "1" *-- "many" SentTransactions : sends
    User "1" *-- "many" ReceivedTransactions : receives
    Currency "1" *-- "many" ExchangeRate
    Currency "1" -- "many" Wallet
    Currency "1" -- "many" Transaction
    Currency "1" -- "many" UserAlert
    ExchangeRate "many" -- "1" RateSource
    Transaction "many" -- "1" TransactionFee
}

@enduml